# modelship

./: .gitignore  Makefile  docker-compose.yml  project1_modelship.md  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile  Dockerfile.dev  Dockerfile.mlflow
handoffs/: handoff-001.md  handoff-002.md
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  mlflow-deployment.yaml  mlflow-pvc.yaml  mlflow-service.yaml  service.yaml
src/api/: main.py
src/api/middleware/: auth.py  rate_limit.py
src/api/models/: ml_model.py  schemas.py
src/api/routes/: api_keys.py  health.py  model_info.py  predict.py
src/scripts/: promote_model.py  register_model.py
tests/: conftest.py  test_auth.py  test_health.py  test_model_loading.py  test_predict.py  test_rate_limit.py
