[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "modelship"
version = "0.1.0"
description = "End-to-end ML deployment platform"
requires-python = ">=3.11"
dependencies = [
    # API
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",

    # Auth
    "python-jose[cryptography]>=3.3",

    # ML
    "transformers>=4.40",
    "torch>=2.3",
    "torchvision>=0.18",

    # Model registry
    "mlflow>=2.13",

    # Monitoring
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",      # async test client for FastAPI
    "ruff>=0.4",
    "locust>=2.29",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]   # pycodestyle errors, pyflakes, isort

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
